package roommate.adapter.api;

public record Access(String key, String room) {
}