package roommate.applicationservice;

public class InvalidInput extends RuntimeException {
}
