package roommate.applicationservice;

public class NotExistentException extends RuntimeException {
}
